k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      restartPolicy: Always
      containers:
      - name: inventory
        image: cluster-registry:5000/inventory:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 60
          httpGet:
            path: /health
            port: 8080
        resources:
          limits:
            cpu: "0.50"
            memory: "128Mi"
          requests:
            cpu: "0.25"
            memory: "64Mi"
